--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
+        "ext-fileinfo": "*",
+        "ext-gd": "*",
         "ext-iconv": "*",
         "api-platform/doctrine-orm": "^4.0",
         "api-platform/symfony": "^4.0",
@@ -15,6 +17,7 @@
         "doctrine/orm": "^3.3",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
+        "phpoffice/phpspreadsheet": "^3.3",
         "phpstan/phpdoc-parser": "^1.33",
         "symfony/amphp-http-client-meta": "^1.0",
         "symfony/asset": "7.1.*",
