removed api key from git (OOPS) Also create customer via api call

--- a/.env
+++ b/.env
@@ -43,3 +43,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+POSTCODE_TECH_KEY='a055aa49-5445-4395-aded-18aa46d48e08'
